--- a/qanda/qanda_app/static/qanda/css/qanda.css
+++ b/qanda/qanda_app/static/qanda/css/qanda.css
@@ -92,7 +92,7 @@
 }
 
 .title {
-	font-size: 22;
+	font-size: 19;
 	color: rgb(0, 0, 0);
 }
 
@@ -371,5 +371,13 @@
 	text-align: right; 
 	left: 65%; 
 	position: relative;
+}
+
+.page-title {
+	position: relative;
+	top: 10px;
+	left: 50px;
+	font-size: 24px;
+	font-weight: 700;
 }
 
