--- a/qanda/qanda_app/static/qanda/css/qanda.css
+++ b/qanda/qanda_app/static/qanda/css/qanda.css
@@ -1,4 +1,56 @@
 
+#overlay {
+	display: none;
+	background: rgba(0,0,0,0.4);
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10000;
+}
+
+#overlay-box {
+	position: fixed;
+	margin-left: 30%;
+	margin-top: 15%;
+	background: rgba(0,0,0,0.5);
+	width: 40%;
+	height: 30%;
+	border-bottom: 2px solid #fff;
+	border-right: 2px solid #fff;
+	border-color: rgba(0, 0, 0, 0.2);
+	text-align: center;
+	color: #f0f0f0;
+}
+
+#overlay-content {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#overlay-title {
+	font-size: 16px;
+	font-weight: 400;
+	margin-bottom: 10px;
+}
+
+#overlay-message {
+	font-size: 14px;
+	font-weight: 300;
+	margin-bottom: 10px;
+}
+
+#overlay-message a {
+	color: rgb(140, 200, 255);
+}
+
+#overlay-date {
+	font-size: 12px;
+	font-weight: 400;
+}
+
 .votecount-box {
 	font-size: 12px !important;
 	padding-top: 10px;
