add overlay to question page

--- a/qanda/qanda_app/templates/qanda/question.html
+++ b/qanda/qanda_app/templates/qanda/question.html
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block body %}
+	
+	{% include "qanda/overlay.html" with visible=question.closed %}
 
 	<div class="container">
 
