--- a/qanda/qanda_app/templates/qanda/scripts.html
+++ b/qanda/qanda_app/templates/qanda/scripts.html
@@ -1,7 +1,7 @@
 {% block scripts %}
 
 <script src="{{ STATIC_URL }}/jquery/jquery-1.9.1.js"></script>
-<script src="{{ STATIC_URL }}qanda/js/qanda.js"></script>
+<script src="{{ STATIC_URL }}qanda/js/qanda.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
 
 {% endblock %}
