fix translation mistake

--- a/qanda/qanda_app/templates/qanda/reply.html
+++ b/qanda/qanda_app/templates/qanda/reply.html
@@ -15,7 +15,7 @@
 	        	{% if reply_form.text.errors %}
 	        		<div class="alert alert-error">
 	        			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			        	<strong>{% trans "Error in Tags" %}</strong>{{ reply_form.text.errors }}
+			        	<strong>{% trans "Error in Reply" %}</strong>{{ reply_form.text.errors }}
 			        </div>
 		        {% endif %}
 	        	{{ reply_form.text }}
