--- a/qanda/qanda_app/templates/qanda/qanda_base.html
+++ b/qanda/qanda_app/templates/qanda/qanda_base.html
@@ -10,7 +10,7 @@
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
           }
         </style>
-        <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+        <!-- <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet"> <!-- -->
         <link href="{{ STATIC_URL }}qanda/css/qanda.css" rel="stylesheet">
         <link rel="icon" 
               type="image/png" 
