shorten pagination break

--- a/qanda/qanda_app/templates/qanda/tag_list.html
+++ b/qanda/qanda_app/templates/qanda/tag_list.html
@@ -53,7 +53,7 @@
 				    	<li class="disabled"><a href="#">{% trans "Prev" %}</a></li>
 					{% endif %}
 						
-						<li class="disabled"><a href="#">_______________________</a></li>
+						<li class="disabled"><a href="#">___________</a></li>
 
 					{% if next %}
 				    	<li class=""><a href="{% url qanda_app.views.tag_list page=next %}">{% trans "Next" %}</a></li>
