--- a/qanda/qanda_app/templates/qanda/category_list.html
+++ b/qanda/qanda_app/templates/qanda/category_list.html
@@ -49,7 +49,7 @@
 				    	<li class="disabled"><a href="#">{% trans "Prev" %}</a></li>
 					{% endif %}
 						
-						<li class="disabled"><a href="#">_______________________</a></li>
+						<li class="disabled"><a href="#">___________</a></li>
 
 					{% if next %}
 				    	<li class=""><a href="{% url qanda_app.views.category_list page=next %}">{% trans "Next" %}</a></li>
