--- a/qanda/qanda_app/templates/qanda/question_list.html
+++ b/qanda/qanda_app/templates/qanda/question_list.html
@@ -171,7 +171,7 @@
 		    	<li class="disabled"><a href="#">{% trans "Prev" %}</a></li>
 			{% endif %}
 				
-				<li class="disabled"><a href="#">_______________________</a></li>
+				<li class="disabled"><a href="#">___________</a></li>
 
 			{% if next %}
 				{% if view == 'user_asked_questions_list' %}
