--- a/qanda/qanda_app/templates/qanda/question_listing_base.html
+++ b/qanda/qanda_app/templates/qanda/question_listing_base.html
@@ -12,7 +12,7 @@
 						{% trans "Answers" %}<br />{{ question.answers.count }}
 					</div>	
 					<div class="span1 viewcount-box">
-						{% trans "Views" %}<br />{{ question.viewCount }}
+						{% trans "Views" %}<br />{{ question.get_unique_view_count }}
 					</div>	
 					<div class="span6 question-box">
 							<span class="title">
