--- a/qanda/qanda_app/templates/qanda/navbar.html
+++ b/qanda/qanda_app/templates/qanda/navbar.html
@@ -32,7 +32,7 @@
           <span class="add-on">
             <i class="icon-search"></i>
             
-            <input type="text" name="{{ search_form.q.name }}" id="id_q" class="search-query" placeholder="{% trans 'Search' %}"></input>
+            <input type="text" name="q" id="id_q" class="search-query" placeholder="{% trans 'Search' %}"></input>
           </span>
         </div>
       </div>
