--- a/qanda/qanda_app/templates/qanda/tag_page.html
+++ b/qanda/qanda_app/templates/qanda/tag_page.html
@@ -19,7 +19,14 @@
 					{% blocktrans with tag=tag %}Questions with "{{ tag }}" tag {% endblocktrans %}
 
 					<div class="pull-right">
-						<div class="btn-group btn-large">
+						<div id="id_categories" class="btn-group btn-large">
+							<script type="text/javascript">
+								$(document).ready(function(){
+									$('#id_categories').click(function(){
+										$('#id_categories').toggleClass('open');
+									});
+								});
+							</script>
 							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 								{% trans "Category Filter" %}
 								<span class="caret"></span>
