display the selected category on the dropdown

--- a/qanda/qanda_app/templates/qanda/tag_page.html
+++ b/qanda/qanda_app/templates/qanda/tag_page.html
@@ -31,7 +31,11 @@
 								});
 							</script>
 							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-								{% trans "Category Filter" %}
+								{% if category %}
+									{{ category }}
+								{% else %}
+									{% trans "Category Filter" %}
+								{% endif %}
 								<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
